# op2secret

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: continuous-integration.yaml  release.yaml
src/: cli.rs  error.rs  main.rs  onepassword.rs
